<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MovieListActivity">

    <item android:id="@+id/favorite"
        android:title="@string/add_favorite_button"
        android:icon="@drawable/add_favorite"
        app:showAsAction="always"
        android:visible="false">
    </item>

    <item android:id="@+id/share"
        android:icon="@drawable/share_movie"
        android:title="@string/share_button"
        app:showAsAction="always"
        android:visible="false">
    </item>

    <item android:id="@+id/action_sort_by"
        android:icon="@drawable/sort_movie"
        android:title="@string/sort_menu"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_sort_by_popularity"
                    android:title="@string/sort_option_popularity" />
                <item android:id="@+id/action_sort_by_rating"
                    android:title="@string/sort_option_rated" />
                <item android:id="@+id/action_sort_by_favorite"
                    android:title="@string/sort_option_favorite" />
            </group>
        </menu>
    </item>
</menu>
