<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/movie_detail_padding_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/movie_detail_padding_left"
                    android:paddingRight="@dimen/movie_detail_padding_normal"
                    android:paddingTop="@dimen/movie_detail_padding_normal"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/movie_title_text_size" />

                 <TextView
                    android:id="@+id/textview_vote_average_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp"
                    android:paddingLeft="@dimen/movie_detail_padding_left"
                    android:text="@string/vote_average_header"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/movie_detail_text_size" />

                <TextView
                    android:id="@+id/textview_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/movie_detail_padding_small"
                    android:paddingLeft="@dimen/movie_detail_padding_left"
                    android:paddingRight="@dimen/movie_detail_padding_small"
                    android:paddingEnd="@dimen/movie_detail_padding_small"
                    android:textSize="@dimen/movie_detail_text_size" />

                <TextView
                    android:id="@+id/textview_release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/movie_detail_padding_top"
                    android:paddingLeft="@dimen/movie_detail_padding_left"
                    android:text="@string/release_date_header"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/movie_detail_text_size" />

                <TextView
                    android:id="@+id/textview_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/movie_detail_padding_small"
                    android:paddingLeft="@dimen/movie_detail_padding_left"
                    android:paddingRight="@dimen/movie_detail_padding_small"
                    android:paddingEnd="@dimen/movie_detail_padding_small"
                    android:textSize="@dimen/movie_detail_text_size" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/extra_detail_padding_left"
            android:paddingRight="@dimen/extra_detail_padding_right"
            android:text="@string/overview_header"
            android:textColor="@color/colorText"
            android:textSize="@dimen/extra_detail_header_text_size" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/extra_detail_padding_top"
            android:paddingLeft="@dimen/extra_detail_padding_left"
            android:paddingRight="@dimen/extra_detail_padding_right"
            android:textColor="@color/colorText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/extras">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/extra_detail_padding_left"
            android:paddingRight="@dimen/extra_detail_padding_right"
            android:paddingTop="@dimen/extra_detail_padding_top"
            android:paddingBottom="@dimen/extra_detail_padding_bottom"
            android:text="@string/trailers_header"
            android:textColor="@color/colorText"
            android:textSize="@dimen/extra_detail_header_text_size" />

        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/trailersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.android.udacity_popular_movies_part2.MovieListActivity"
            android:layout_marginRight="@dimen/extra_detail_padding_right"
            android:layout_marginLeft="@dimen/extra_detail_padding_left"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noTrailerView"
                android:textSize="@dimen/extra_detail_error_text_size"
                android:text="@string/no_trailers_found"
                android:visibility="invisible"
                android:paddingLeft="@dimen/extra_detail_padding_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/extra_detail_padding_left"
            android:paddingBottom="@dimen/extra_detail_padding_bottom"
            android:text="@string/reviews_header"
            android:textColor="@color/colorText"
            android:textSize="@dimen/extra_detail_header_text_size" />

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/reviewsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.example.android.udacity_popular_movies_part2.MovieListActivity"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noReviewView"
                android:textSize="@dimen/extra_detail_error_text_size"
                android:paddingLeft="@dimen/extra_detail_padding_left"
                android:text="@string/no_reviews_found"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>



